Arrumado a tela "visualizar-chamados" que não estava funcionando.
Agora está funcionando, da para clicar nos tickets e voltar, requerer materiais.
OBS: Os botões "Histórico de chamados, Finalizados e Protocolos" não estão em funcionamento por enquanto.

--- a/Notifica-FrontEnd/src/app/components/tela-de-funcionarios/tela-de-funcionarios.component.html
+++ b/Notifica-FrontEnd/src/app/components/tela-de-funcionarios/tela-de-funcionarios.component.html
@@ -62,6 +62,11 @@
   <main class="content-area">
     <div class="form-container">
       <!-- Container em branco -->
+        <div class="tickets-list">
+        <div *ngIf="tickets.length === 0" class="alert alert-info">
+          Nenhum ticket encontrado no histórico.
+        </div>
+      </div>
     </div>
   </main>
 </div>
