--- a/Notifica-FrontEnd/src/app/components/student/student-dashboard/student-dashboard.component.html
+++ b/Notifica-FrontEnd/src/app/components/student/student-dashboard/student-dashboard.component.html
@@ -14,7 +14,7 @@
     
     <div class="user-info">
       <div class="user-avatar">
-        <i class="material-icons">account_circle</i>
+        <i class="material-icons"></i>
       </div>
       <span class="user-name">{{ currentUser }}</span>
       <button class="logout-btn" (click)="logout()">Sair</button>
