--- a/Notifica-FrontEnd/src/app/components/cursos/cursoslist/cursoslist.component.scss
+++ b/Notifica-FrontEnd/src/app/components/cursos/cursoslist/cursoslist.component.scss
@@ -1,6 +1,6 @@
 /* Header Styles */
 .header {
-  background: linear-gradient(135deg, #00d4aa 0%, #00bfa5 100%);
+background: #1ACCAF;
   height: 120px;
   position: relative;
   overflow: hidden;
@@ -13,10 +13,10 @@
   right: 0;
   width: 100%;
   height: 100%;
-  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"><path d="M0,0 L1200,0 L1200,120 L0,120 Z" fill="rgba(255,255,255,0.1)"/><path d="M800,20 L1000,80 L1200,40 L1200,0 L800,0 Z" fill="rgba(255,255,255,0.05)"/></svg>');
-  background-repeat: no-repeat;
-  background-position: right center;
-  background-size: cover;
+  // background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"><path d="M0,0 L1200,0 L1200,120 L0,120 Z" fill="rgba(255,255,255,0.1)"/><path d="M800,20 L1000,80 L1200,40 L1200,0 L800,0 Z" fill="rgba(255,255,255,0.05)"/></svg>');
+  // background-repeat: no-repeat;
+  // background-position: right center;
+  // background-size: cover;
 }
 
 .header-content {
