--- a/Notifica-FrontEnd/src/app/components/layout/menu/menu.component.html
+++ b/Notifica-FrontEnd/src/app/components/layout/menu/menu.component.html
@@ -1,5 +1,7 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark  bg-success">
+<nav class="navbar navbar-expand-lg navbar-dark">
+
+
   <!-- Container wrapper -->
   <div class="container-fluid">
     <!-- Navbar brand -->
